--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valtio-devtools-client",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Library to connect valtio app to valtio-devtools",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/cyrusbowman/valtio-devtools-client.git"
+    "url": "git+ssh://git@github.com:cyrusbowman/valtio-devtools-client.git"
   },
   "keywords": [
     "valtio",
@@ -17,9 +17,9 @@
   "author": "Cyrus Bowman",
   "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.com/cyrusbowman/valtio-devtools-client/issues"
+    "url": "https://github.com/cyrusbowman/valtio-devtools-client/issues"
   },
-  "homepage": "https://gitlab.com/cyrusbowman/valtio-devtools-client#readme",
+  "homepage": "https://github.com/cyrusbowman/valtio-devtools-client#readme",
   "dependencies": {
     "isomorphic-ws": "^5.0.0"
   },
